--- a/INF1009-09-01-2020.md
+++ b/INF1009-09-01-2020.md
@@ -2,18 +2,48 @@
 
 ## Exercícios passados em Aula
 
-1. P v Q, ¬P |= Q
-2. P -> ¬(Q ^ R), Q |= R -> P
-3. P -> Q, P ^ ¬Q |= R
-4. P -> Q, Q -> R |= P -> R
+
+
+
+
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-| P | Q | P v Q | ¬P | P v Q, ¬P \|= Q |
+- [ ] ¬(P -> (G v R))            - **CORRETA**
+
+|                P |                G |                R |          (G v R) |     P -> (G v R) |  ¬(P -> (G v R)) |
+|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
+|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:heavy_check_mark:|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|
+|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] (Q ^ P) -> ¬(¬R)           - **CORRETA**
+
+|                P |                Q |                R |          (Q ^ P) |               ¬R |            ¬(¬R) | (Q ^ P) -> ¬(¬R) |
+|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
+|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
+|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+|:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P v Q, ¬P |= Q             - 
+
+|                P |                Q |            P v Q |               ¬P |  P v Q, ¬P \|= Q |
 |:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
 |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
 |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |
 |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
 |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P -> ¬(Q ^ R), Q |= R -> P - 
+
 |                P |                Q |                R |            Q ^ R |         ¬(Q ^ R) |    P -> ¬(Q ^ R) | R -> P | P -> ¬(Q ^ R), Q \|= R -> P |
 |:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
 |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |
@@ -25,6 +55,8 @@
 |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
 |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P -> Q, P ^ ¬Q |= R        - 
+
 |                P |                Q |                R |            P -> Q|                ¬Q|            P ^ ¬Q| P -> Q, P ^ ¬Q \|= R|
 |:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
 |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:               |
@@ -36,6 +68,8 @@
 |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
 |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P -> Q, Q -> R |= P -> R   - 
+
 |                P |                Q |                R |            P -> Q|            Q -> R|            P -> R|P -> Q, Q -> R \|= P -> R|
 |:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
 |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
@@ -48,7 +82,7 @@
 |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-1. Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
-2. Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
-3. Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
+- [ ]  Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
+- [ ]  Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
+- [ ]  Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
