- Feito Ezercicio de formalização

--- a/INF1009-09-01-2020.md
+++ b/INF1009-09-01-2020.md
@@ -1,83 +1,137 @@
 # 01/09/2020
 
 ## Exercícios passados em Aula
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [X] ¬(P ⟶ (G v R))
 
-|                P |                G |                R |          (G v R) |     P ⟶ (G v R) |  ¬(P ⟶ (G v R)) |
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [X] (Q ^ P) ⟶ ¬(¬R)
+¬(P -> (G v R))
+(Q ^ P) -> ¬(¬R)
 
-|                P |                Q |                R |          (Q ^ P) |               ¬R |            ¬(¬R) | (Q ^ P) ⟶ ¬(¬R) |
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|
-|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
-|:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
-|:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+P v Q, ¬P |= Q
+P -> ¬(Q ^ R), Q |= R -> P
+P -> Q, P ^ ¬Q |= R
+P -> Q, Q -> R |= P -> R
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P v Q, ¬P |= Q
+[:heavy_check_mark:] ¬(P -> (G v R))
 
-|                P |                Q |            P v Q |               ¬P |  P v Q, ¬P \|= Q |
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
+| LINHA |                P |                G |                R |          (G v R) |     P -> (G v R) |  ¬(P -> (G v R)) |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P ⟶ ¬(Q ^ R), Q |= R ⟶ P
+[:heavy_check_mark:] (Q ^ P) -> ¬(¬R)
 
-|                P |                Q |                R |            Q ^ R |         ¬(Q ^ R) |    P ⟶ ¬(Q ^ R) | R ⟶ P | P ⟶ ¬(Q ^ R), Q \|= R ⟶ P |
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |
-|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
-|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+| LINHA |                P |                Q |                R |          (Q ^ P) |               ¬R |            ¬(¬R) | (Q ^ P) -> ¬(¬R) |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|  6    |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+|  7    |:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P ⟶ Q, P ^ ¬Q |= R
+[:heavy_check_mark:] P v Q, ¬P |= Q
+(ARGUMENTO VÁLIDO POIS NA ÚNICA LINHA EM QUE AS PREMISSAS SÃO VERDADEIRAS, A CONCLUSÃO TAMBÉM É VERDADEIRA)
 
-|                P |                Q |                R |            P ⟶ Q|                ¬Q|            P ^ ¬Q| P ⟶ Q, P ^ ¬Q \|= R|
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:               |
-|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:               |
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |
-|:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:               |
-|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:               |
-|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+| LINHA |                P |                Q |            P v Q |               ¬P |  P v Q, ¬P \|= Q |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
+|  2    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |
+|  3    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
+|  4    |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P ⟶ Q, Q ⟶ R |= P ⟶ R
+[:heavy_check_mark:] P -> ¬(Q ^ R), Q |= R -> P
+(ARGUMENTO NÃO É VÁLIDO, POIS NA LINHA 5 ONDE AS PREMISSAS SÃO TODAS VERDADEIRAS, O ARGUMENTO É FALSO)
 
-|                P |                Q |                R |            P ⟶ Q|            Q ⟶ R|            P ⟶ R|P ⟶ Q, Q ⟶ R \|= P ⟶ R|
-|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|
-|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:               |
-|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |
-|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |
-|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
+| LINHA |                P |                Q |                R |            Q ^ R |         ¬(Q ^ R) |    P -> ¬(Q ^ R) | R -> P | P -> ¬(Q ^ R), Q \|= R -> P |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-----------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:                |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark: |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:                |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark: |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:                |
+|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P -> Q, P ^ ¬Q |= R
 
-- [ ]  Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
+| LINHA |                P |                Q |                R |            P -> Q|                ¬Q|            P ^ ¬Q| P -> Q, P ^ ¬Q \|= R|
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                  |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:                  |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:                  |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:x:                  |
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                  |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:                  |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:   |
+|  8    |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                  |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+- [ ] P -> Q, Q -> R |= P -> R
+
+| LINHA |                P |                Q |                R |            P -> Q|            Q -> R|            P -> R|P -> Q, Q -> R \|= P -> R|
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-----------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:       |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:                      |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                      |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:x:                      |
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:       |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:                      |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:       |
+|  8    |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:       |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+[:x:]  Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
 - [ ]  Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
 - [ ]  Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+F -> (S v D), ¬S ^ F |= D
+(ARGUMENTO VÁLIDO, POIS NA LINHA 3 AS PREMISSAS SÃO VERDADEIRAS E A CONCLUSÃO É VERDADEIRA)
+
+| LINHA |                F |                S |                D |          (S v D) |    F -> (S v D)  |               ¬S |           ¬S ^ F | F -> (S v D), ¬S ^ F \|= D |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:--------------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                         |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                         |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:          |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                         |
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                         |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                         |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:                         |
+|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:                         |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+T -> ¬E, T |= ¬E
+(ARGUMENTO VÁLIDO, POIS NA LINHA 2 AS PREMISSAS SÃO VERDADEIRAS E A CONCLUSÃO É VERDADEIRA)
+
+| LINHA |                T |                E |               ¬E |          T -> ¬E | T -> ¬E, T \|= ¬E |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:-----------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:x:                |
+|  2    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark: |
+|  3    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:                |
+|  4    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+((J -> P) ^ V)) -> C, V |= (J -> P) -> C
+()
+
+| LINHA |                J |                P |                V |                C |         (J -> P) |     (J -> P) ^ V | ((J -> P) ^ V)) -> C | ((J -> P) ^ V)) -> C, V \|= (J -> P) -> C |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:--------------------:|:-----------------------------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
+|  3    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|
+|  4    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
+|  5    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|
+|  6    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |
+|  7    |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|
+|  8    |:heavy_check_mark:|:x:               |:x:               |:x:               |
+|  9    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
+| 10    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
+| 11    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
+| 12    |:x:               |:heavy_check_mark:|:x:               |:x:               |
+| 13    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
+| 14    |:x:               |:x:               |:heavy_check_mark:|:x:               |
+| 15    |:x:               |:x:               |:x:               |:heavy_check_mark:|
+| 16    |:x:               |:x:               |:x:               |:x:               |
