--- a/INF1009-09-01-2020.md
+++ b/INF1009-09-01-2020.md
@@ -49,18 +49,19 @@ P -> Q, Q -> R |= P -> R
 [:heavy_check_mark:] P -> ¬(Q ^ R), Q |= R -> P
 (ARGUMENTO NÃO É VÁLIDO, POIS NA LINHA 5 ONDE AS PREMISSAS SÃO TODAS VERDADEIRAS, O ARGUMENTO É FALSO)
 
-| LINHA |                P |                Q |                R |            Q ^ R |         ¬(Q ^ R) |    P -> ¬(Q ^ R) | R -> P | P -> ¬(Q ^ R), Q \|= R -> P |
-|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-----------------:|
-|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:                |
-|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark: |
-|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
-|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
-|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:                |
-|  6    |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark: |
-|  7    |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:                |
-|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                |
+| LINHA |                P |                Q |                R |            Q ^ R |         ¬(Q ^ R) |    P -> ¬(Q ^ R) | R -> P           | P -> ¬(Q ^ R), Q \|= R -> P |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:---------------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:                          |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:           |
+|  3    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                          |
+|  4    |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                          |
+|  5    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:                          |
+|  6    |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:           |
+|  7    |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:                          |
+|  8    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                          |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P -> Q, P ^ ¬Q |= R
+[ ] P -> Q, P ^ ¬Q |= R
+(ARGUMENTO NÃO VÁLIDO, POIS NA LINHA 8 TODAS AS PREMISSAS SÃO VÁLIDAS E A CONCLUSÃO É FALSA)
 
 | LINHA |                P |                Q |                R |            P -> Q|                ¬Q|            P ^ ¬Q| P -> Q, P ^ ¬Q \|= R|
 |:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-------------------:|
@@ -73,7 +74,8 @@ P -> Q, Q -> R |= P -> R
 |  7    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:   |
 |  8    |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:                  |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-- [ ] P -> Q, Q -> R |= P -> R
+[ ] P -> Q, Q -> R |= P -> R
+(ARGUMENTO NÃO VÁLIDO, POIS NAS LINHAS 1, 5, 7 E 8 TODAS AS PREMISSAS SÃO VÁLIDAS E A CONCLUSÃO É FALSA)
 
 | LINHA |                P |                Q |                R |            P -> Q|            Q -> R|            P -> R|P -> Q, Q -> R \|= P -> R|
 |:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:-----------------------:|
@@ -87,8 +89,8 @@ P -> Q, Q -> R |= P -> R
 |  8    |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:       |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 [:x:]  Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
-- [ ]  Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
-- [ ]  Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
+[ ]  Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
+[ ]  Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 F -> (S v D), ¬S ^ F |= D
 (ARGUMENTO VÁLIDO, POIS NA LINHA 3 AS PREMISSAS SÃO VERDADEIRAS E A CONCLUSÃO É VERDADEIRA)
@@ -115,23 +117,23 @@ T -> ¬E, T |= ¬E
 |  4    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 ((J -> P) ^ V)) -> C, V |= (J -> P) -> C
-()
+(ARGUMENTO É VERDADEIRO, POIS NAS LINHAS 1, 5, 6, 9 E 13 AS PREMISSAS SÃO VERDADEIRAS E A CONCLUSÃO É VERDADEIRA)
 
-| LINHA |                J |                P |                V |                C |         (J -> P) |     (J -> P) ^ V | ((J -> P) ^ V)) -> C | ((J -> P) ^ V)) -> C, V \|= (J -> P) -> C |
-|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:--------------------:|:-----------------------------------------:|
-|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-|  2    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |
-|  3    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|
-|  4    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |
-|  5    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|
-|  6    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |
-|  7    |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|
-|  8    |:heavy_check_mark:|:x:               |:x:               |:x:               |
-|  9    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|
-| 10    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |
-| 11    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|
-| 12    |:x:               |:heavy_check_mark:|:x:               |:x:               |
-| 13    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|
-| 14    |:x:               |:x:               |:heavy_check_mark:|:x:               |
-| 15    |:x:               |:x:               |:x:               |:heavy_check_mark:|
-| 16    |:x:               |:x:               |:x:               |:x:               |
+| LINHA |                J |                P |                V |                C |         (J -> P) |     (J -> P) ^ V | ((J -> P) ^ V)) -> C | (J -> P) -> C    | ((J -> P) ^ V)) -> C, V \|= (J -> P) -> C |
+|:-----:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:----------------:|:--------------------:|:----------------:|:-----------------------------------------:|
+|  1    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:    |:heavy_check_mark:|:heavy_check_mark:                         |
+|  2    |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                   |:x:               |:x:                                        |
+|  3    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+|  4    |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+|  5    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:    |:heavy_check_mark:|:heavy_check_mark:                         |
+|  6    |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:               |:x:               |:x:               |:heavy_check_mark:    |:heavy_check_mark:|:heavy_check_mark:                         |
+|  7    |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+|  8    |:heavy_check_mark:|:x:               |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+|  9    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:    |:heavy_check_mark:|:heavy_check_mark:                         |
+| 10    |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                   |:x:               |:x:                                        |
+| 11    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+| 12    |:x:               |:heavy_check_mark:|:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:    |:x:               |:x:                                        |
+| 13    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:|:heavy_check_mark:    |:heavy_check_mark:|:heavy_check_mark:                         |
+| 14    |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                   |:x:               |:x:                                        |
+| 15    |:x:               |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:               |:heavy_check_mark:    |:heavy_check_mark:|:x:                                        |
+| 16    |:x:               |:x:               |:x:               |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:    |:x:               |:x:                                        |
