- Correção de exercício

--- a/INF1009-09-01-2020.md
+++ b/INF1009-09-01-2020.md
@@ -94,7 +94,7 @@ P -> Q, Q -> R |= P -> R
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 [:x:] Hoje é fim de semana só se hoje for sábado ou domingo. Hoje não é sábado e é fim de semana. Logo, hoje é domingo.
 
-[ ] Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
+[:heavy_check_mark:] Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
 
 [ ] Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
 
