--- a/INF1009-09-01-2020.md
+++ b/INF1009-09-01-2020.md
@@ -96,7 +96,7 @@ P -> Q, Q -> R |= P -> R
 
 [:heavy_check_mark:] Se vejo televisão, então não estudo. Estou vendo televisão. Portanto, não estou estudando.
 
-[ ] Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
+[:x:] Se João descobrir sobre o plano e der valor à sua vida, então João deixará o paı́s. João dá valor à sua vida. Logo, se João descobrir sobre o plano, deixará o paı́s.
 
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 F -> (S v D), ¬S ^ F |= D
@@ -125,7 +125,9 @@ T -> ¬E, T |= ¬E
 |  3    |:x:               |:heavy_check_mark:|:x:               |:heavy_check_mark:|:x:                |
 |  4    |:x:               |:x:               |:heavy_check_mark:|:heavy_check_mark:|:x:                |
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-((J -> P) ^ V)) -> C, V |= (J -> P) -> C
+*((J -> P) ^ V)) -> C, V |= (J -> P) -> C* - ERRADO
+
+(J ^ V) -> P, V |= V -> P
 
 (ARGUMENTO É VERDADEIRO, POIS NAS LINHAS 1, 5, 6, 9 E 13 AS PREMISSAS SÃO VERDADEIRAS E A CONCLUSÃO É VERDADEIRA)
 
